<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="event"
            type="android.view.View.OnClickListener"/>
        <variable
            name="frag"
            type="com.shiyidaoAndroidApp.ui.login.CreateCompanyFragment"/>
    </data>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background_color">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/in_put_phoneNumber"
        android:id="@+id/phone_number"
        style="@style/reginst_hindText_EditText"
       />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/in_put_confirm_code"
        style="@style/reginst_hindText_EditText"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/in_put_password2"
        style="@style/reginst_hindText_EditText"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/in_put_real_name"
        style="@style/reginst_hindText_EditText"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/in_put_company_name"
        style="@style/reginst_hindText_EditText"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:background="@color/text_color_white"
        android:padding="@dimen/dp25">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp18"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent"
            android:layout_marginBottom="39.5dp"
            android:textColor="@color/text_color_white"
            android:gravity="center"
            android:textSize="@dimen/sp17"
            android:id="@+id/button_create_company"
            android:text="@string/create_company"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp12"
            android:gravity="center"
            android:layout_marginBottom="@dimen/dp43"
            android:layout_above="@+id/button_create_company"
            android:textColor="@color/reginst_hint_color"
            android:text="@string/tip_company"/>
    </RelativeLayout>
</LinearLayout></layout>