<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

    </data>

<LinearLayout
    android:orientation="vertical"
    android:background="@color/color_White"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    style="@style/new_task_item_layout"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/message_items_textview"
        android:text="@string/file_name"/>
    <EditText
        android:layout_width="0dp"
        android:layout_weight="1"
        android:hint="@string/please_input"
        android:layout_height="wrap_content"
        style="@style/message_items_edittext"
        />
</LinearLayout>
    <View
    android:layout_width="match_parent"
    android:layout_marginRight="@dimen/dp12"
    android:layout_marginLeft="@dimen/dp12"
    android:layout_height="@dimen/dp0.5"
    android:background="@color/color_0.5dp_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        style="@style/new_task_item_layout"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/message_items_textview"
            android:text="@string/file_discrption"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/in_put_discrotion"
            android:layout_height="wrap_content"
            style="@style/message_items_edittext"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_marginRight="@dimen/dp12"
        android:layout_marginLeft="@dimen/dp12"
        android:layout_height="@dimen/dp0.5"
        android:background="@color/color_0.5dp_line"/>
    <LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    style="@style/new_task_item_layout"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/message_items_textview"
        android:text="@string/user_person"/>
    <EditText
        android:layout_width="0dp"
        android:layout_weight="1"
        android:hint="@string/please_choose"
        android:layout_height="wrap_content"
        style="@style/message_items_edittext"
        />
    <ImageView
        android:layout_width="@dimen/dp43"
        android:layout_height="@dimen/dp20"
        android:src="@mipmap/group_55"/>
</LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_marginRight="@dimen/dp12"
        android:layout_marginLeft="@dimen/dp12"
        android:layout_height="@dimen/dp0.5"
        android:background="@color/color_0.5dp_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        style="@style/new_task_item_layout"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/message_items_textview"
            android:text="@string/chose_file"/>
        <TextView
            android:layout_width="@dimen/dp52"
            android:layout_height="@dimen/dp52"
            style="@style/message_items_edittext"
            android:background="@mipmap/appendix_image"/>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/background_approvial_gray"
                style="@style/new_approvial_bottm_text"
                android:textColor="@color/company_message_text_color"
                android:text="@string/cancle"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:background="@color/colorAccent"
                android:text="@string/upload"
                android:textColor="@color/text_color_white"
                style="@style/new_approvial_bottm_text"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </RelativeLayout>

</LinearLayout></layout>