<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="event"
            type="android.view.View.OnClickListener"/>
    </data>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:background="@color/color_White"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        style="@style/layout_message_items"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/message_items_textview"
            android:text="@string/company_id"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/message_items_edittext"
            android:hint="@string/please_input"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0.5"
        android:background="@color/color_0.5dp_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        style="@style/layout_message_items"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/message_items_textview"
            android:text="@string/invited_code"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/message_items_edittext"
            android:hint="@string/code_message"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0.5"
        android:background="@color/color_0.5dp_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        style="@style/layout_message_items"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/message_items_textview"
            android:text="@string/company_logo"/>
        <!--<EditText-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_height="wrap_content"-->
            <!--style="@style/message_items_edittext"-->
            <!--android:hint="@string/code_message"/>-->
        <TextView
            android:layout_width="@dimen/dp55"
            android:layout_height="@dimen/dp55"
            style="@style/message_items_edittext"
            android:background="@mipmap/appendix_image"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0.5"
        android:background="@color/color_0.5dp_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        style="@style/layout_message_items"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/message_items_textview"
            android:text="@string/company_name"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/message_items_edittext"
            android:hint="@string/please_input"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0.5"
        android:background="@color/color_0.5dp_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        style="@style/layout_message_items"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/message_items_textview"
            android:text="@string/company_call"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/message_items_edittext"
            android:hint="@string/please_input"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0.5"
        android:background="@color/color_0.5dp_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        style="@style/layout_message_items"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/message_items_textview"
            android:text="@string/company_call"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/message_items_edittext"
            android:hint="@string/please_choose"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0.5"
        android:background="@color/color_0.5dp_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        style="@style/layout_message_items"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/message_items_textview"
            android:text="@string/location_area"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/message_items_edittext"
            android:hint="@string/please_choose"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0.5"
        android:background="@color/color_0.5dp_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        style="@style/layout_message_items"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/message_items_textview"
            android:text="@string/contacts"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/message_items_edittext"
            android:hint="@string/please_input"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0.5"
        android:background="@color/color_0.5dp_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        style="@style/layout_message_items"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/message_items_textview"
            android:text="@string/contace_number"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/message_items_edittext"
            android:hint="@string/please_input"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0.5"
        android:background="@color/color_0.5dp_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        style="@style/layout_message_items"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/message_items_textview"
            android:text="@string/business"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/message_items_edittext"
            android:hint="@string/please_input"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0.5"
        android:background="@color/color_0.5dp_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        style="@style/layout_message_items"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/message_items_textview"
            android:text="@string/contact_mailbox"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/message_items_edittext"
            android:hint="@string/please_input"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0.5"
        android:background="@color/color_0.5dp_line"/>
    <TextView
        android:layout_marginTop="@dimen/dp68"
        android:layout_width="match_parent"
        style="@style/bottom_button"
        android:text="@string/save"
        android:layout_height="wrap_content" />

</LinearLayout></ScrollView></layout>