<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
      <variable
          name="stu"
          type="com.shiyidaoAndroidApp.bean.stu"/>
        <variable
            name="event"
            type="android.view.View.OnClickListener"/>
    </data>
<LinearLayout
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_background">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/dp93"
    android:paddingBottom="@dimen/dp93">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textSize="@dimen/activity_login_title"
        android:textColor="@color/text_color_white"
        />
</RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dp25"
    android:paddingRight="@dimen/dp25">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/hindText_EditText"

        android:id="@+id/edittext_login_name"
        android:text="@{stu.age}"
        android:drawableLeft="@mipmap/login_phone"
        android:hint="@string/in_put_phoneNumber"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0.5"
        android:layout_marginTop="@dimen/dp10"
        android:background="@color/hintTextColot"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp25"
        style="@style/hindText_EditText"
        android:text="@{stu.age}"
        android:inputType="textPassword"
        android:drawableLeft="@mipmap/locked_password"
        android:hint="@string/in_put_password"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0.5"
        android:layout_marginTop="@dimen/dp10"
        android:background="@color/hintTextColot"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         style="@style/login_and_reginster"
        android:background="@color/login_backg"
        android:layout_marginTop="@dimen/dp101"
        android:onClick="@{event}"
        android:id="@+id/login_button"
        android:textColor="@color/text_color_white"
        android:text="@string/login"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        style="@style/login_and_reginster"
        android:id="@+id/reginst_button"
        android:onClick="@{event}"
        android:background="@drawable/background_reginst_button"
        android:textColor="@color/text_color_white"
        android:text="@string/reginst"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp19"
        android:id="@+id/forget_password"
        android:onClick="@{event}"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/text_color_white"
        android:text="@string/forget_password"/>
</LinearLayout>

</LinearLayout>
</layout>