<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="event"
            type="android.view.View.OnClickListener"/>
    </data>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/color_White"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp30.5"
        android:paddingTop="@dimen/dp30.5"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="XX省XX市XX有限公司"
            android:textColor="@color/color_black_text"
            android:textSize="@dimen/sp17"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="XX省XX市XX有限公司"
            android:layout_marginTop="@dimen/dp10"
            android:textColor="@color/reginst_hint_color"
            android:textSize="@dimen/sp12"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0.5"
        android:background="@color/color_0.5dp_line"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/in_put_phoneNumber"
        style="@style/reginst_hindText_EditText"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0.5"
        android:background="@color/color_0.5dp_line"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/in_put_confirm_code"
        style="@style/reginst_hindText_EditText"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0.5"
        android:background="@color/color_0.5dp_line"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/in_put_password2"
        style="@style/reginst_hindText_EditText"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0.5"
        android:background="@color/color_0.5dp_line"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/in_put_real_name"
        style="@style/reginst_hindText_EditText"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0.5"
        android:background="@color/color_0.5dp_line"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:paddingLeft="@dimen/dp25"
        android:paddingRight="@dimen/dp25"
        android:paddingBottom="@dimen/dp47">
        <TextView
            style="@style/bottom_button"
            android:text="@string/next_step"
            android:onClick="@{event}"
            android:id="@+id/second_next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout></layout>